--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-cookies": "^1.7.0",
+    "vue-router": "^3.1.6",
+    "vue-session": "^1.0.0",
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.3.0",
