--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.13.0",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.0",
+    "vue-phone-number-input": "^1.1.9",
     "vue-router": "^3.1.6",
     "vue-session": "^1.0.0",
     "vuex": "^3.3.0"
