--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
     "vue": "^2.6.11",
