--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
+    "hashmap": "^2.4.0",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.0",
     "vue-phone-number-input": "^1.1.9",
