--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
     "hashmap": "^2.4.0",
+    "moment": "^2.25.3",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.0",
+    "vue-momentjs": "^0.1.2",
     "vue-phone-number-input": "^1.1.9",
     "vue-router": "^3.1.6",
     "vue-session": "^1.0.0",
