이미지 수집(서버 데이터 전송 추가해야)

--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
+    "canvas": "^2.6.1",
+    "cropperjs": "^1.5.6",
+    "croppr": "^2.3.1",
+    "file-saver": "^2.0.2",
+    "fs": "0.0.1-security",
     "hashmap": "^2.4.0",
     "moment": "^2.25.3",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.0",
+    "vue-cropperjs": "^4.1.0",
     "vue-momentjs": "^0.1.2",
     "vue-phone-number-input": "^1.1.9",
     "vue-router": "^3.1.6",
