--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "audiomaker": "^1.0.3",
     "aws-sdk": "^2.348.0",
+    "aws-signature-v4": "^1.4.0",
     "axios": "^0.19.2",
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.4.1",
