--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mp3-cutter": "^1.0.6",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
+    "vue-audio-recorder": "^3.0.1",
     "vue-audio-visual": "^2.0.2",
     "vue-cookies": "^1.7.0",
     "vue-cropperjs": "^4.1.0",
