--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
     "canvas": "^2.6.1",
+    "chart.js": "^2.9.3",
     "cropperjs": "^1.5.6",
     "croppr": "^2.3.1",
     "file-saver": "^2.0.2",
@@ -26,6 +27,7 @@
     "vue": "^2.6.11",
     "vue-audio-recorder": "^3.0.1",
     "vue-audio-visual": "^2.0.2",
+    "vue-chartjs": "^3.5.0",
     "vue-cookies": "^1.7.0",
     "vue-cropperjs": "^4.1.0",
     "vue-momentjs": "^0.1.2",
