--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mp3-cutter": "^1.0.6",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
+    "vue-audio": "0.0.12",
     "vue-audio-recorder": "^3.0.1",
     "vue-audio-visual": "^2.0.2",
     "vue-chartjs": "^3.5.0",
@@ -37,6 +38,7 @@
     "vue-session": "^1.0.0",
     "vue-wave-surfer": "^1.0.1",
     "vue-waveform": "^2.2.19",
+    "vuetify-audio": "^0.3.2",
     "vuex": "^3.3.0",
     "waveform-playlist": "^3.2.4",
     "wavesurfer-player-vue": "^0.1.2",
@@ -45,7 +47,10 @@
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
-    "vue-template-compiler": "^2.6.11"
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify": "^2.3.0"
   },
   "browserslist": [
     "> 1%",
