--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "file-saver": "^2.0.2",
     "fs": "0.0.1-security",
     "hashmap": "^2.4.0",
+    "js-sha256": "^0.9.0",
     "moment": "^2.25.3",
     "mp3-cutter": "^1.0.6",
     "qs": "^6.9.4",
